--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -58,7 +58,7 @@ services:
         app:
           condition: service_healthy
     db:
-      image: 'mariadb:10'
+      image: 'mariadb:11'
       environment:
         MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
         MYSQL_ROOT_HOST: "%"
@@ -68,9 +68,9 @@ services:
         MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
       volumes:
         - 'mariadb:/var/lib/mysql'
-        - './tests/Utils/create-mysql-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
+        - './tests/Utils/create-mariadb-testing-database.sh:/docker-entrypoint-initdb.d/10-create-testing-database.sh'
       healthcheck:
-        test: [ "CMD", "mysqladmin", "ping", "-u${DB_USERNAME}", "-p${DB_PASSWORD}" ]
+        test: [ "CMD", "healthcheck.sh", "--connect", "--innodb_initialized" ]
         interval: 5s
         retries: 12
         timeout: 5s
@@ -84,13 +84,13 @@ services:
         interval: 5s
         retries: 12
         timeout: 5s
-    mailhog:
-      image: 'mailhog/mailhog:latest'
+    mailpit:
+      image: 'axllent/mailpit:latest'
       ports:
-        - '${FORWARD_MAILHOG_PORT:-1025}:1025'
-        - '${FORWARD_MAILHOG_DASHBOARD_PORT:-8025}:8025'
+        - '${FORWARD_MAILPIT_PORT:-1025}:1025'
+        - '${FORWARD_MAILPIT_DASHBOARD_PORT:-8025}:8025'
     phpmyadmin:
-      image: phpmyadmin/phpmyadmin
+      image: 'phpmyadmin:latest'
       ports:
         - '${FORWARD_PHPMYADMIN_PORT:-8080}:80'
       environment:
