--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,9 @@
         "laravel/ui": "^4.3",
         "littleredbutton/bigbluebutton-api-php": "^5.3.0",
         "maatwebsite/excel": "^3.1",
-        "nunomaduro/collision": "^8.1",
         "maennchen/zipstream-php": "^3.1",
+        "nunomaduro/collision": "^8.1",
+        "spatie/laravel-csp": "^2.9",
         "spatie/laravel-ignition": "^2.0",
         "symfony/var-exporter": "^7.0"
     },
