--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -195,14 +195,15 @@ jobs:
 
       - name: Copy .env
         run: docker run --rm pilos:latest cat ./.env.ci > .env
-      - name: Change permissions
-        run: chmod 777 .env
-
-      - name: (Debug) Show .env
-        run: cat .env
 
       - name: Generate key
-        run: docker run --rm -v ${{ github.workspace }}/.env:/var/www/html/.env --entrypoint pilos-cli pilos:latest key:generate
+        run: |
+          docker run --rm \
+          --mount type=bind,source=${{ github.workspace }}/.env,target=/var/www/html/.env \
+          --entrypoint /bin/bash \
+          pilos:latest \
+          chown :www-data .env
+          -c ""chown :www-data .env && pilos-cli key:generate"
 
       - name: (Debug) Show .env
         run: cat .env
