--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -202,7 +202,7 @@ jobs:
           --mount type=bind,source=${{ github.workspace }}/.env,target=/var/www/html/.env \
           --entrypoint /bin/bash \
           pilos:latest \
-          -c "chown :www-data .env && pilos-cli key:generate"
+          -c "chown :www-data .env && ls -la && pilos-cli key:generate"
 
       - name: (Debug) Show .env
         run: cat .env
