--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -212,7 +212,7 @@ jobs:
           cat .env
 
       - name: Run docker compose
-        run: docker compose -f docker-compose-ci.yml up -d
+        run: docker compose -f docker-compose.yml -f docker-compose-ci.yml up -d
 
       - name: Wait for the application to start
         run: |
