--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -214,26 +214,12 @@ jobs:
       - name: Run docker compose
         run: docker compose -f docker-compose.yml -f docker-compose-ci.yml up -d
 
-      - name: Wait for the application to start
-        uses: nev7n/wait_for_response@v1
+      - name: Cypress run
+        uses: cypress-io/github-action@v6
         with:
-          url: 'http://localhost'
-          responseCode: 200
-
-      - name: Get NPM Cache Directory
-        id: npm-cache
-        run: |
-          echo "::set-output name=dir::$(npm config get cache)"
-      - name: Get NPM Cache Keys
-        uses: actions/cache@v2
-        with:
-          path: ${{ steps.npm-cache.outputs.dir }}
-          key: node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            node-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run cypress
-        run: cypress run
+          wait-on: 'http://localhost' # Waits for above
+          record: true
+        env:
+          CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
