--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,10 @@ name: CI
 
 on:
   push:
+    branches:
+      - master
+      - develop
+      - '[0-9].x'
   pull_request:
 
 env:
@@ -217,7 +221,6 @@ jobs:
         with:
           wait-on: 'http://localhost' # Waits for above
           record: true
-          group: CI
           tag: ${{ github.event_name }}
         env:
           CYPRESS_PROJECT_ID: ${{ secrets.CYPRESS_PROJECT_ID }}
