--- a/package.json
+++ b/package.json
@@ -6,18 +6,11 @@
         "build": "vite build",
         "lint": "eslint --ext .js,.vue,.json .",
         "fix-cs": "eslint --ext .js,.vue,.json . --fix",
-        "test": "vitest run",
-        "test:watch": "vitest watch",
-        "test:ui": "vitest --ui",
-        "cover": "vitest run --coverage",
         "docs:install": "cd docs && npm install",
         "docs:dev": "cd docs && npm run start -- --host 0.0.0.0"
     },
     "devDependencies": {
         "@intlify/eslint-plugin-vue-i18n": "^2.0.0",
-        "@pinia/testing": "^0.1.3",
-        "@vitest/coverage-istanbul": "^1.1.3",
-        "@vitest/ui": "^1.1.3",
         "cypress": "^13.8.1",
         "eslint": "^8.56.0",
         "eslint-config-standard": "^17.0.0",
@@ -25,10 +18,7 @@
         "eslint-plugin-jsonc": "^2.16.0",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^6.1.1",
-        "eslint-plugin-vitest-globals": "^1.5.0",
-        "eslint-plugin-vue": "^9.26.0",
-        "jsdom": "^24.1.0",
-        "vitest": "^1.1.3"
+        "eslint-plugin-vue": "^9.26.0"
     },
     "dependencies": {
         "@floating-ui/vue": "^1.0.4",
