--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "chartjs-adapter-date-fns": "^3.0.0",
         "date-fns": "^3.6.0",
         "dompurify": "^3.1.4",
+        "dotenv": "^16.4.5",
         "laravel-vite-plugin": "^1.0.4",
         "lodash": "^4.17.19",
         "mitt": "^3.0.1",
