--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,9 @@
   "extends":[
       "plugin:vue/vue3-essential",
      "standard",
-     "plugin:jsonc/base"
+     "plugin:jsonc/base",
+    "plugin:cypress/recommended",
+    "plugin:mocha/recommended"
   ],
   "globals":{
      "Atomics":"readonly",
@@ -28,8 +30,10 @@
      "sourceType":"module"
   },
   "plugins":[
-     "vue",
-     "@intlify/vue-i18n"
+    "vue",
+    "@intlify/vue-i18n",
+    "cypress",
+    "mocha"
   ],
   "rules":{
      "jsonc/sort-keys":[
@@ -73,7 +77,9 @@
      ],
      "vue/custom-event-name-casing":[
         "error"
-     ]
+     ],
+    "mocha/no-exclusive-tests": "error",
+    "mocha/no-skipped-tests": "error"
   },
   "settings":{
      "vue-i18n":{
