--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
         "cypress": "^13.8.1",
         "eslint": "^8.56.0",
         "eslint-config-standard": "^17.0.0",
+        "eslint-plugin-cypress": "^3.3.0",
         "eslint-plugin-import": "^2.29.1",
         "eslint-plugin-jsonc": "^2.16.0",
+        "eslint-plugin-mocha": "^10.4.3",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^6.2.0",
         "eslint-plugin-vue": "^9.26.0"
