--- a/.env.ci
+++ b/.env.ci
@@ -43,3 +43,6 @@ MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=admin@domain.tld
 MAIL_FROM_NAME="${APP_NAME}"
+
+BBB_TEST_SERVER_HOST=
+BBB_TEST_SERVER_SECRET=
