Add cypress system tests (#1166)
* Add command to create demo content

* Add integration tests

* Add bbb test server to env file

* fix sed

* fix docker compose name

* fix docker compose name

* Debug docker compose

* Fix cypress baseurl

* Rename to system tests

* Add more tests, data test attributes

* Remove services that could effect the state during system tests

* Fix spelling

* Code cleanup

* Update docker compose setup for system tests

* Add tests for access code

* Force migration in ci workflows

* Update changelog

--- a/.env.ci
+++ b/.env.ci
@@ -1,7 +1,7 @@
 APP_NAME=PILOS
-APP_ENV=local
+APP_ENV=production
 APP_KEY=
-APP_DEBUG=true
+APP_DEBUG=false
 # API Server URL
 APP_URL=http://localhost
 
@@ -43,3 +43,6 @@ MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS=admin@domain.tld
 MAIL_FROM_NAME="${APP_NAME}"
+
+BBB_TEST_SERVER_HOST=
+BBB_TEST_SERVER_SECRET=
