--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "devDependencies": {
         "@intlify/eslint-plugin-vue-i18n": "^2.0.0",
+        "@primevue/auto-import-resolver": "^4.0.0",
         "autoprefixer": "^10.4.19",
         "cypress": "^13.12.0",
         "eslint": "^8.56.0",
