--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
     },
     "devDependencies": {
         "@intlify/eslint-plugin-vue-i18n": "^2.0.0",
-        "@primevue/auto-import-resolver": "^4.0.0",
-        "autoprefixer": "^10.4.19",
         "cypress": "^13.12.0",
         "eslint": "^8.56.0",
         "eslint-config-standard": "^17.0.0",
@@ -22,13 +20,12 @@
         "eslint-plugin-mocha": "^10.4.3",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^6.4.0",
-        "eslint-plugin-vue": "^9.26.0",
-        "postcss": "^8.4.38",
-        "tailwindcss": "^3.4.4"
+        "eslint-plugin-vue": "^9.26.0"
     },
     "dependencies": {
         "@floating-ui/vue": "^1.1.1",
         "@fortawesome/fontawesome-free": "^6.5.2",
+        "@primevue/auto-import-resolver": "^4.0.0",
         "@primevue/themes": "^4.0.0-rc.3",
         "@tiptap/extension-color": "^2.4.0",
         "@tiptap/extension-highlight": "^2.4.0",
@@ -42,6 +39,7 @@
         "@vitejs/plugin-vue": "^5.0.5",
         "@vueuse/components": "^10.11.0",
         "@vueuse/core": "^10.7.2",
+        "autoprefixer": "^10.4.19",
         "axe-core": "^4.9.1",
         "axios": "^1.7.2",
         "chart.js": "^4.4.3",
@@ -52,11 +50,13 @@
         "laravel-vite-plugin": "^1.0.4",
         "lodash": "^4.17.19",
         "mitt": "^3.0.1",
+        "postcss": "^8.4.38",
         "pinia": "^2.1.7",
         "primeflex": "^3.3.1",
         "primevue": "^4.0.0",
         "primevue-sass-theme": "primefaces/primevue-sass-theme#semver:^3.52.0",
         "sass": "^1.77.6",
+        "tailwindcss": "^3.4.4",
         "tailwindcss-primeui": "^0.3.3",
         "ua-parser-js": "^1.0.38",
         "unplugin-vue-components": "^0.27.0",
