--- a/.github/workflows/pull-locales.yml
+++ b/.github/workflows/pull-locales.yml
@@ -2,6 +2,8 @@ name: Pull locales from POEditor
 
 on:
   workflow_dispatch:
+  schedule:
+    - cron: "0 * * * *"
 jobs:
   pull-locales:
     name: Pull locales from POEditor
