--- a/.github/workflows/upload-locales.yml
+++ b/.github/workflows/upload-locales.yml
@@ -2,6 +2,14 @@ name: Upload locales to POEditor
 
 on:
   workflow_dispatch:
+    inputs:
+      poeditor_project_id:
+        required: true
+        description: 'POEditor Project ID'
+        type: number
+  push:
+    branches:
+      - 'develop'
 jobs:
   pull-locales:
     name: Upload locales to POEditor
@@ -73,5 +81,5 @@ jobs:
         DB_USERNAME: root
         DB_PASSWORD: password
         POEDITOR_TOKEN: ${{ secrets.POEDITOR_TOKEN }}
-        POEDITOR_PROJECT: ${{ secrets.POEDITOR_PROJECT }}
+        POEDITOR_PROJECT: ${{ github.event.inputs.poeditor_project_id || secrets.POEDITOR_PROJECT}}
       run: php artisan locales:upload
