--- a/.github/workflows/upload-locales.yml
+++ b/.github/workflows/upload-locales.yml
@@ -68,6 +68,7 @@ jobs:
       run: chmod -R 777 storage bootstrap/cache
     - name: Migrate Database
       env:
+        DB_HOST: 127.0.0.1
         DB_PORT: ${{ job.services.mariadb.ports[3306] }}
         DB_DATABASE: test
         DB_USERNAME: root
@@ -76,6 +77,7 @@ jobs:
 
     - name: Execute command to push locales from POEditor
       env:
+        DB_HOST: 127.0.0.1
         DB_PORT: ${{ job.services.mariadb.ports[3306] }}
         DB_DATABASE: test
         DB_USERNAME: root
