feat: Add LDAP_OPTIONS env variable

--- a/.env.example
+++ b/.env.example
@@ -74,6 +74,12 @@ MAIL_FROM_NAME="${APP_NAME}"
 # LDAP logging debugging only
 #LDAP_LOGGING=true
 
+# Optional comma separated list of additional options for LDAP authentication
+# See: https://ldaprecord.com/docs/core/v3/configuration and http://php.net/ldap_set_option
+# Note: ldap_set_option constants must be resolved to their integer values.
+# This example sets LDAP_OPT_X_TLS_REQUIRE_CERT to LDAP_OPT_X_TLS_NEVER to ignore missing and self-signed TLS certificates.
+#LDAP_OPTIONS="24582=0"
+
 # Enable Shibboleth authentication
 #SHIBBOLETH_ENABLED=false
 
