--- a/.env.example
+++ b/.env.example
@@ -54,7 +54,7 @@ MAIL_FROM_NAME="${APP_NAME}"
 #LDAP_BASE_DN="ou=people,dc=university,dc=org"
 #LDAP_TIMEOUT=5
 #LDAP_SSL=false
-#LDAP_TLS=false
+#LDAP_TLS=true
 
 # Query the users attributes using the users own credentials
 #LDAP_LOAD_ATTRIBUTES_AS_USER=false
